# quickset-rust-launcher

./: .quickset.toml  Cargo.toml  README.md
src/: main.rs
