[package]
name = "quickset-rust-launcher"
version = "0.1.0"
authors = ["Jared Dobson <jared.dobson@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
diesel_migrations = "1.4.0"
structopt = "0.3"
